Fixed vehicle recommendations not showing on log out, updated styling, Updated Car image gallery gap

--- a/src/app/cars/[id]/page.module.css
+++ b/src/app/cars/[id]/page.module.css
@@ -49,3 +49,10 @@
   letter-spacing: 0.2px;
   color: var(--color-black500);
 }
+.vehicleRecommendations {
+  display: flex;
+  flex-direction: column;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 100px 75px;
+}
