--- a/src/app/components/car-image-gallery/car-image-gallery.module.css
+++ b/src/app/components/car-image-gallery/car-image-gallery.module.css
@@ -1,8 +1,8 @@
 .imgContainer {
   display: flex;
   flex-direction: column;
-  gap: 230px;
   max-width: 740px;
+  gap: 20px;
 }
 .allImagesContainer {
   display: flex;
@@ -12,7 +12,7 @@
 .imageCount {
   position: absolute;
   top: -60px;
-  right: 10px;
+  right: 0px;
   background-color: var(--color-black200);
   color: var(--color-white100);
   padding: 8px 19.67px;
